# Sort-Markdown-Tables

./: .copier-answers.yml  .cspell.json  .gitignore  .jscpd.json  .mega-linter.yml  .treefmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENCE.txt  README.md  cog.toml  skills-lock.json
.agents/: PLAN.md
.agents/logs/: 2026-05-08.md  2026-05-09.md
.agents/skills/github/: SKILL.md
.agents/skills/github/agents/: openai.yaml
.ai/: ARCHITECTURE.md  PLAN.md
.atl/: skill-registry.md
.github/workflows/: ci.yml  release.yml
openspec/: config.yaml
openspec/changes/smt-core/: design.md  proposal.md  spec.md  tasks.md
openspec/specs/smt/: plan.md
src/: cli.rs  error.rs  lib.rs  main.rs  parser.rs  sorter.rs  writer.rs
tests/: integration_test.rs
tests/fixtures/expected/: case_insensitive.expected.md  descending.expected.md  mixed_numeric.expected.md  multi_column.expected.md  multiple_tables.expected.md  no_tables.expected.md  simple.expected.md  simple_numeric.expected.md
tests/fixtures/input/: case_insensitive.md  descending.md  mixed_numeric.md  multi_column.md  multiple_tables.md  no_tables.md  simple.md  simple_numeric.md  unmarked_table.md
tests/fixtures/unsorted/: unsorted.md  unsorted_lex.md  unsorted_numeric.md
tests/perf/: large_100_tables.md
