[package]
name = "smt"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["MRDGH2821"]
description = "Sort markdown tables opted-in via HTML comments"
repository = "https://github.com/MRDGH2821/Sort-Markdown-Tables"
readme = "README.md"
keywords = ["markdown", "table", "sort", "cli", "utility"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
glob = "0.3"
tempfile = "3.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[lib]
name = "smt"
path = "src/lib.rs"

[[bin]]
name = "smt"
path = "src/main.rs"
