[package]
authors = ["MRDGH2821"]
categories = ["command-line-utilities", "text-processing"]
description = "Sort markdown tables opted-in via HTML comments"
edition = "2021"
keywords = ["cli", "markdown", "sort", "table", "utility"]
license = "GPL-3.0-or-later"
name = "smt"
readme = "README.md"
repository = "https://github.com/MRDGH2821/Sort-Markdown-Tables"
version = "0.1.0"

[lib]
name = "smt"
path = "src/lib.rs"

[[bin]]
name = "smt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
tempfile = "3.8"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
