[package]
name = "smt"
version = "0.1.2"
edition = "2021"
description = "Sort markdown tables opted-in via HTML comments"
readme = "README.md"
repository = "https://github.com/MRDGH2821/Sort-Markdown-Tables"
license = "GPL-3.0-or-later"
# tombi: format.rules.array-values-order = "ascending"
keywords = ["cli", "markdown", "sort", "table", "utility"]
# tombi: format.rules.array-values-order = "ascending"
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "smt"
path = "src/lib.rs"

[[bin]]
name = "smt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
tempfile = "3.8"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
